--- a/app/src/main/res/layout/activity_viaje2.xml
+++ b/app/src/main/res/layout/activity_viaje2.xml
@@ -41,7 +41,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_margin="10dp"
+        android:orientation="vertical"
+        android:padding="10dp">
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Cuál es el primer lugar a donde viajes?"
+            android:textColor="@android:color/black"
+            android:textSize="18sp" />
 
         <SearchView
             android:layout_width="match_parent"
