--- a/app/src/main/res/layout/activity_actividad.xml
+++ b/app/src/main/res/layout/activity_actividad.xml
@@ -61,6 +61,22 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="369dp"
         android:layout_weight="1"
         android:orientation="vertical">
