--- a/app/src/main/res/layout/activity_viaje2.xml
+++ b/app/src/main/res/layout/activity_viaje2.xml
@@ -26,9 +26,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Empezar Viaje "
+            android:text="Empezar Your Trip"
             android:textColor="@android:color/black"
-            android:textSize="30sp" />
+            android:textSize="22sp" />
 
         <Button
             android:id="@+id/button8"
