--- a/app/src/main/res/layout/activity_viaje3.xml
+++ b/app/src/main/res/layout/activity_viaje3.xml
@@ -35,12 +35,9 @@
             android:textSize="22sp" />
     </LinearLayout>
 
-    <GridLayoutLayout
+    <GridView
         android:layout_width="match_parent"
-        android:layout_height="254dp"
-        android:orientation="vertical">
-
-    </GridLayoutLayout>
+        android:layout_height="242dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -79,4 +76,5 @@
             android:background="@android:color/transparent"
             app:srcCompat="@drawable/ic_image_black_40dp" />
     </LinearLayout>
+
 </LinearLayout>
