--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -107,7 +107,7 @@
     </ScrollView>
 
     <TextView
-        android:id="@+id/Txt_Olvido_Contrasena"
+        android:id="@+id/Txt_Olvido_Contraseña"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right|center"
