--- a/app/src/main/res/layout/activity_olvido_contrasena.xml
+++ b/app/src/main/res/layout/activity_olvido_contrasena.xml
@@ -42,7 +42,7 @@
         tools:layout_editor_absoluteY="117dp" />
 
     <EditText
-        android:id="@+id/Txt_email"
+        android:id="@+id/Txt_Email"
         android:layout_width="357dp"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -52,7 +52,7 @@
         tools:layout_editor_absoluteY="169dp" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/Img_Siguiente"
         android:layout_width="68dp"
         android:layout_height="58dp"
         android:layout_gravity="right"
