--- a/app/src/main/res/layout/activity_viaje.xml
+++ b/app/src/main/res/layout/activity_viaje.xml
@@ -23,8 +23,8 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
+            android:id="@+id/Btn_Viaje"
+            android:layout_width="319dp"
             android:layout_height="85dp"
             android:layout_margin="5dp"
             android:layout_weight="1"
@@ -41,8 +41,8 @@
         android:rowCount="3">
 
         <Button
-            android:id="@+id/button1"
-            android:layout_width="193dp"
+            android:id="@+id/Btn_escapada"
+            android:layout_width="166dp"
             android:layout_height="85sp"
             android:layout_margin="2dp"
             android:layout_weight="1"
@@ -51,7 +51,7 @@
             android:text="ESCAPADA" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/Btn_Vcotidiana"
             android:layout_width="193dp"
             android:layout_height="85dp"
             android:layout_margin="2dp"
@@ -61,8 +61,8 @@
             android:text="VIDA COTIDIANA" />
 
         <Button
-            android:id="@+id/button3"
-            android:layout_width="193dp"
+            android:id="@+id/Btn_Familia"
+            android:layout_width="166dp"
             android:layout_height="85dp"
             android:layout_margin="2dp"
             android:layout_weight="1"
@@ -71,7 +71,7 @@
             android:text="FAMILIA" />
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/Btn_Bebe"
             android:layout_width="193dp"
             android:layout_height="85dp"
             android:layout_margin="2dp"
@@ -81,8 +81,8 @@
             android:text="BEBÉ" />
 
         <Button
-            android:id="@+id/button5"
-            android:layout_width="193dp"
+            android:id="@+id/Btn_Mascota"
+            android:layout_width="167dp"
             android:layout_height="85dp"
             android:layout_margin="2dp"
             android:layout_weight="1"
@@ -91,7 +91,7 @@
             android:text="MASCOTAS" />
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/Btn_OViaje"
             android:layout_width="193dp"
             android:layout_height="85dp"
             android:layout_margin="2dp"
@@ -109,6 +109,7 @@
         android:layout_margin="10dp">
 
         <TextView
+            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
