--- a/app/src/main/res/layout/activity_viaje2.xml
+++ b/app/src/main/res/layout/activity_viaje2.xml
@@ -13,28 +13,27 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/button7"
-            android:layout_width="wrap_content"
+            android:id="@+id/Btn_Atras"
+            android:layout_width="23dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:drawableLeft="@drawable/ic_chevron_left_black_35dp"
-            android:text="Atrás" />
+            android:drawableLeft="@drawable/ic_chevron_left_black_35dp" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:text="Empezar Your Trip"
             android:textColor="@android:color/black"
             android:textSize="22sp" />
 
         <Button
-            android:id="@+id/button8"
+            android:id="@+id/Btn_empezar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:text="Empezar" />
     </LinearLayout>
 
@@ -53,11 +52,10 @@
             android:textColor="@android:color/black"
             android:textSize="18sp" />
 
-        <SearchView
+        <Spinner
+            android:id="@+id/sp_opciones"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:contentDescription="ej: París / Canadá / Toscana"
-            android:queryHint="ej: París / Canadá / Toscana" />
+            android:layout_height="wrap_content" />
+
     </LinearLayout>
 </LinearLayout>
