--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -1,48 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".Actividad2">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="453dp"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView7"
+        <ImageView
+            android:id="@+id/imageView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Explorar"
-            android:textColor="@android:color/black"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/profile" />
 
-        <SearchView
+        <EditText
+            android:id="@+id/txt_Nombres"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:contentDescription="Buscar Lugares y Personas"
-            android:queryHint="Buscar Lugares y Personas" />
+            android:ems="10"
+            android:hint="Nombre"
+            android:inputType="textPersonName" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="385dp"
-        android:orientation="vertical">
-
-        <ListView
+        <EditText
+            android:id="@+id/txt_Apellidos"
             android:layout_width="match_parent"
-            android:layout_height="288dp" />
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Apellidos"
+            android:inputType="textPersonName" />
+
+        <EditText
+            android:id="@+id/txt_Email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Email"
+            android:inputType="textEmailAddress" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/id_botones_menu"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="horizontal"
         android:padding="2dp">
@@ -83,4 +86,5 @@
             android:padding="2dp"
             app:srcCompat="@drawable/ic_person_black_40dp" />
     </LinearLayout>
+
 </LinearLayout>
