--- a/app/src/main/res/layout/activity_viaje2.xml
+++ b/app/src/main/res/layout/activity_viaje2.xml
@@ -29,12 +29,6 @@
             android:textColor="@android:color/black"
             android:textSize="22sp" />
 
-        <Button
-            android:id="@+id/Btn_empezar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:text="Empezar" />
     </LinearLayout>
 
     <LinearLayout
@@ -56,6 +50,13 @@
             android:id="@+id/sp_opciones"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/Btn_empezar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="Empezar" />
 
     </LinearLayout>
 </LinearLayout>
