--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -18,7 +18,7 @@
             app:srcCompat="@drawable/profile" />
 
         <EditText
-            android:id="@+id/txt_Nombres"
+            android:id="@+id/Txt_Nombres"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -26,7 +26,7 @@
             android:inputType="textPersonName" />
 
         <EditText
-            android:id="@+id/txt_Apellidos"
+            android:id="@+id/Txt_Apellidos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -34,7 +34,7 @@
             android:inputType="textPersonName" />
 
         <EditText
-            android:id="@+id/txt_Email"
+            android:id="@+id/Txt_Email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -51,7 +51,7 @@
         android:padding="2dp">
 
         <ImageButton
-            android:id="@+id/imgBtn_Mis_viajes"
+            android:id="@+id/ImgBtn_Mis_viajes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -60,7 +60,7 @@
             app:srcCompat="@drawable/ic_image_black_40dp" />
 
         <ImageButton
-            android:id="@+id/imgBtn_Explorar"
+            android:id="@+id/ImgBtn_Explorar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -69,7 +69,7 @@
             app:srcCompat="@drawable/ic_search_black_40dp" />
 
         <ImageButton
-            android:id="@+id/imgBtn_Notificacion"
+            android:id="@+id/ImgBtn_Notificacion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -78,7 +78,7 @@
             app:srcCompat="@drawable/ic_message_black_40dp" />
 
         <ImageButton
-            android:id="@+id/imgBtn_Contactos"
+            android:id="@+id/ImgBtn_Contactos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
