--- a/app/src/main/res/layout/activity_actividad2.xml
+++ b/app/src/main/res/layout/activity_actividad2.xml
@@ -31,12 +31,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="385dp"
+        android:layout_height="369dp"
         android:orientation="vertical">
 
         <ListView
             android:layout_width="match_parent"
-            android:layout_height="288dp" />
+            android:layout_height="match_parent" />
     </LinearLayout>
 
     <LinearLayout
