--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -40,6 +40,20 @@
             android:ems="10"
             android:hint="Email"
             android:inputType="textEmailAddress" />
+
+        <EditText
+            android:id="@+id/Txt_Contrasena"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Contrseña"
+            android:inputType="textPersonName" />
+
+        <Button
+            android:id="@+id/Btn_Guardar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Actualizar" />
     </LinearLayout>
 
     <LinearLayout
